src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Game__c</fullName>
        <label>Game</label>
        <referenceTo>Game__c</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Players</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Points_Awarded__c</fullName>
        <label>Total Points Awarded</label>
        <summarizedField>Achievement__c.Points_Awarded__c</summarizedField>
        <summaryForeignKey>Achievement__c.Player__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Hunts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Game__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Total_Points_Awarded__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Game__c</field>
            <operation>equals</operation>
            <value>Cloudforce</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLAYER{000}</displayFormat>
        <label>Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>